closes #11 add api endpoint to get all users
