# docs/swagger.yaml
@@ -191,6 +191,26 @@ paths:
       tags:
       - Authorization
   /user:
+    get:
+      description: get all Users
+      parameters:
+      - description: Admin Secret
+        in: header
+        name: Admin-Secret
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/server.getUser'
+            type: array
+      summary: Retrieve all Users
+      tags:
+      - User
     post:
       consumes:
       - application/json
@@ -223,7 +243,7 @@ paths:
       parameters:
       - description: Admin Secret
         in: header
-        name: ADMIN-SECRET
+        name: Admin-Secret
         required: true
         type: string
       - description: User ID
@@ -246,7 +266,7 @@ paths:
       parameters:
       - description: Admin Secret
         in: header
-        name: ADMIN-SECRET
+        name: Admin-Secret
         required: true
         type: string
       - description: User ID
